--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
               <img src="./pictures/coaching-lesson.jpg" class="img-fluid" alt="coaching lesson" />
             </div>
             <div class="col-md p-5">
-              <h2>Learn The Fundamentals</h2>
+              <h2 class="text-center p-3">Learn The Fundamentals</h2>
               <p class="lead">
                 Allow our mentors with passion for the sport and your goals in mind to help you. Guiding <span class="text-warning">you</span> is what pushes us to do and be better in what we do! 
               </p>
@@ -178,7 +178,7 @@
           <div class="row align-items-center justify-content-between">
 
             <div class="col-md p-5">
-              <h2>Learn Speed</h2>
+              <h2 class="text-center p-3">Learn Speed</h2>
               <p class="lead">
                 Want to push further? Do you have speed in your skates? Join us in competing in regional &national competitions! We travel to compete in some of the nations toughest competitions and would love to see <span class="text-warning">you</span> rock the podiums in one of our uniforms!
               </p>
@@ -209,20 +209,21 @@
                 <iframe width="1080" height="800" src="https://www.youtube.com/embed/1mPrRZn1MkM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
               </div>
             </div>
-            <div class="col-md p-5">
+            <!-- <div class="col-md p-5">
               <h2>Meet Us</h2>
               <p class="lead">
                 Come hang out, wether it be to train, hangout or meet new people.
                 <br> Lace-em Up!  
               </p>
-              <p>
-                
-              </p>
-              <!-- <a target="_self" href="./faq.html" class="btn btn-warning mt-3">
-                <i class="bi bi-chevron-right"></i> Read More
-              </a> -->
-            </div>
+            </div> -->
           </div>
+          <div class="col-md">
+              <h2 class="text-center">Meet Us</h2>
+              <h3 class="lead text-center">
+                Come hang out, wether it be to train, hangout or meet new people.
+                LaceUp!  
+              </h3>
+            </div>
         </div>
       </section>
 
@@ -294,33 +295,6 @@
               </div>
           </div>
       </section>
-
-    <!-- Contact Us -->
-    <!-- <section class="p-4">
-      <div class="container">
-        <div class="row g-3">
-          <div class="col-md">
-            <h2 class="text-center mb-2">Contact Info</h2>
-            <ul class="list-group list-group-flush lead">
-              <li class="list-group-item">
-                <span class="fw-bold">Main Location:</span> 5001 Nebraska Ave, Huber Heights, OH 45424
-              </li>
-              <li class="list-group-item">
-                <span class="fw-bold">Enrollment Phone:</span> (937) 610-2827
-              </li>
-              <li class="list-group-item">
-                <span class="fw-bold">Enrollment Email:</span> phantomspeedskating@gmail.com
-              </li>
-              <li class="list-group-item">
-                <span class="fw-bold">Facebook Group:</span>
-                <a href="https://www.facebook.com/groups/phantomracing" target="_blank">facebook.com/groups/phantomracing</a>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </section> -->
-
       <!-- Footer -->
 
     <footer class="p-5 bg-dark text-white text-center position-relative">
@@ -352,10 +326,10 @@
                       <span class="fw-bold">Main Location:</span> 5001 Nebraska Ave, Huber Heights, OH 45424
                     </li>
                     <li class="list-group-item">
-                      <span class="fw-bold">Enrollment Phone:</span> (937) 610-2827
+                      <span class="fw-bold">Phone:</span> (937) 610-2827
                     </li>
                     <li class="list-group-item">
-                      <span class="fw-bold">Enrollment Email:</span> phantomspeedskating@gmail.com
+                      <span class="fw-bold">Email:</span> phantomspeedskating@gmail.com
                     </li>
                     <li class="list-group-item">
                       <span class="fw-bold">Facebook Group:</span>
@@ -366,51 +340,14 @@
               </div>
             </div>
           </section>
-
-          <!-- Form -->
-          <!-- <p class="lead">Fill out this form and we will get back to you</p>
-          <form action="https://formspree.io/f/xbjwgkkr" name="contactInfo"
-          method="POST">
-              <div class="mb-3">
-                  <label for="first-name" class="col-form-label">First Name:</label>
-                  <input type="text" name="first-name" class="form-control" id="first-name">
-              </div>
-              <div class="mb-3">
-                <label for="last-name" class="col-form-label">Last Name:</label>
-                <input type="text" name="last-name" class="form-control" id="last-name" />
-              </div>
-              <div class="mb-3">
-                <label for="email" class="col-form-label">Email:</label>
-                <input type="email" name="email" class="form-control" id="email" required/>
-              </div>
-              <div class="mb-3">
-                <label for="phone" class="col-form-label">Phone:</label>
-                <input type="tel" name="phone" class="form-control" id="phone" />
-              </div>
-              <div class="form-floating">
-                <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea2" style="height: 100px"></textarea>
-                <label for="floatingTextarea2">Comments</label>
-              </div> -->
-
-              <!-- <div class="mb-3 p-5">
-                <label>
-                  Your message:
-                  <textarea class="bb-3" name="message"></textarea>
-                </label>
-              </div> -->
                 <div class="modal-footer">
                   <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                  <!-- <button type="submit" class="btn btn-warning">Submit</button>
-                  <p>We'll email you back shortly!</p> -->
                 </div>  
-          </form>
         </div>
         
       </div>
     </div>
-  </div>
-
-
+</div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
