--- a/faq.html
+++ b/faq.html
@@ -76,7 +76,7 @@
           <li class="list-group-item"><a href="https://www.youtube.com/channel/UCazE2BCji2sJp8AHTgxV5aw" target="_blank">The Jason Husk Show: Managed Chaos</a></li>
           <li class="list-group-item"><a href="https://www.facebook.com/J.D.HAPPYHOUR" target="_blank">J.D. HAPPY HOUR</a></li>
           <li class="list-group-item"><a href="https://www.youtube.com/channel/UC_QWj9EYEI2_DozJr1H9y8g" target="_blank">Skating Unfiltered</a></li>
-          <li class="list-group-item"><a href="https://www.youtube.com/c/JoeyMantiaOfficial" target="_blank">Joey Mantia</a></li>
+          <li class="list-group-item"><a href="https://www.youtube.com/c/JoeyMantiaOfficial" target="_blank">Joey Mantia's Channel</a></li>
         </ul></div>
       </div>
     </div>
@@ -321,9 +321,9 @@ How long are those frames?-->
       <footer class="fixed-bottom p-5 bg-warning text-white text-center position-relative">
         <div class="container">
             <p class="lead text-dark">Copyright &copy; 2022 PhantomRacing</p>
-            <!-- <a href="" class="position-absolute bottom-0 end-0 p-5">
+            <a href="" class="position-absolute bottom-0 end-0 p-5">
                 <i class="bi bi-arrow-up-circle h1"></i>
-            </a> -->
+            </a>
         </div>
       </footer>
 
